--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,18 @@
       <version>3.0.14.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
+      <version>1.1</version>
+    </dependency>
+
   </dependencies>
 
 </project>
