--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,7 +3,12 @@ db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/tableofusers
 db.username=root
 db.password=root
+db.entity.package = web.model
 
-# Hibernate properties
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+db.initialSize = 30
+db.minIdle = 30
+db.maxIdle = 60
+db.timeBetweenEvictionRunsMillis = 30000
+db.minEvictableIdleTimeMillis = 60000
+db.validationQuery = select version()
+db.testOnBorrow = true
