--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -5,10 +5,6 @@ db.username=root
 db.password=root
 db.entity.package = web.model
 
-db.initialSize = 30
-db.minIdle = 30
-db.maxIdle = 60
-db.timeBetweenEvictionRunsMillis = 30000
-db.minEvictableIdleTimeMillis = 60000
-db.validationQuery = select version()
-db.testOnBorrow = true
+# Hibernate properties
+hibernate.show_sql=true
+hibernate.hbm2ddl.auto=update
